--- a/Notebook_Scripts_Data/model_generator.ipynb
+++ b/Notebook_Scripts_Data/model_generator.ipynb
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "0184c7fe",
+   "id": "2c96e519",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "93f02d6b",
+   "id": "9eb08423",
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e23bc9c5",
+   "id": "455a77af",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "fbd51cc3",
+   "id": "68cecbf8",
    "metadata": {},
    "outputs": [
     {
@@ -1833,13 +1833,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "4699fd88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9275726881714343"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "recall_score(y_val, y_preds, average='macro')"
+    "recall_score(y_val, y_preds_rf, average='macro')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "d24a5464",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9276595744680851"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall_score(y_val, y_preds_rf, average='micro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "18c13f71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9276595744680851"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall_score(y_val, y_preds_rf, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "907d5ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
