--- a/Notebook_Scripts_Data/model_generator.ipynb
+++ b/Notebook_Scripts_Data/model_generator.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "250619af",
+   "id": "dae0aab0",
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 376,
    "id": "1df009b6",
    "metadata": {
     "scrolled": true
@@ -1501,7 +1501,7 @@
     "for title, normalize in titles_options:\n",
     "    fig, ax = plt.subplots(figsize=(12, 12))\n",
     "\n",
-    "    disp = plot_confusion_matrix(model_svc, X_val_emb_nom, y_val,cmap=plt.cm.Blues,ax=ax)\n",
+    "    disp = plot_confusion_matrix(model_svc, X_val_emb_nom, y_val,ax=ax,cmap=plt.cm.Blues)\n",
     "    disp.ax_.set_title(title)\n",
     "\n",
     "    print(title)\n",
